prevent scrollbar from updating width of the main

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,6 +31,7 @@ a {
   flex-direction: column;
   flex-shrink: 0;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .row-content {
